--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,11 @@
     }
    ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "# the probability that the card is a king is 4/52, since there are 4 kings in a standard deck of 52 cards. \n",
+    "#Rewording this, if  is the event \"this card is a king,\" the prior probability: \n",
+    "p_king = 4/52 \n",
+    "p_king"
    ]
   },
   {
@@ -63,7 +67,20 @@
     }
    ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "# The posterior probability P(king|Face)can be calculated using Bayes' theorem as\n",
+    "\n",
+    "# P(king|face) = P(face|king)P(king) / P(face)\n",
+    "\n",
+    "# We also know P(face|king) = 1, as every king is a face card\n",
+    "\n",
+    "p_face_given_king = 1\n",
+    "\n",
+    "# Since there are 3 face cards in each suit (Jack, Queen, King) , the probability of a face card is P(F) = 3/13\n",
+    "p_face = 3/13\n",
+    "\n",
+    "p_king_given_face = p_face_given_king* p_king/p_face\n",
+    "p_king_given_face"
    ]
   },
   {
@@ -89,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,19 +115,26 @@
        "0.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Part 1\n",
-    "# Your solution"
+    "# we need P(A|B)\n",
+    "\n",
+    "p_a = 1/4\n",
+    "p_b = 1/2\n",
+    "p_b_given_a = 1\n",
+    "\n",
+    "p_a_given_b = p_b_given_a*p_a/p_b\n",
+    "p_a_given_b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,14 +143,21 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Part 2 \n",
-    "# Your solution"
+    "# We need P(A|C)\n",
+    "\n",
+    "# we need P(C) i.e. prior prob. that couple has two boys , which is equal to (1-p_both_girls)\n",
+    "p_c = 1 - 1/4\n",
+    "p_c_given_a = 1\n",
+    "\n",
+    "p_a_given_c = p_c_given_a*p_a/p_c\n",
+    "p_a_given_c"
    ]
   },
   {
@@ -156,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,13 +196,26 @@
        "0.5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "# By Bayes' Theorem, the probability you have the disease is\n",
+    "\n",
+    "#P(D|Pos) = P(Pos|D)* P(D) / P(Pos) \n",
+    "\n",
+    "# P(Pos) is calculated as :\n",
+    "# You either don't have the disease and tested incorrectly (0.1*0.99), \n",
+    "# or you don't have the disease and tested incorrectly (0.99 *0.1). \n",
+    "\n",
+    "\n",
+    "p_pos = (0.01*0.99) + (0.99 *0.01)\n",
+    "\n",
+    "p_d_given_pos = 0.01 * 0.99/p_pos\n",
+    "p_d_given_pos"
    ]
   },
   {
@@ -186,9 +230,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
